--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RetrofitDemoUsingMVP">
         <activity
+            android:name=".vehicle.VehicleListActivity"
+            android:exported="true" />
+        <activity
             android:name=".login.LoginActivity"
-            android:exported="true" >
+            android:exported="true"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
